--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" >
     <meta content="Mutuavisió | Tu óptica de confianza en Barcelona" name="description" >
    <meta content="óptica, Barcelona, Mutuavisió, salud visual, gafas, lentillas, revisión visual, óptica familiar" name="keywords">
-<meta content="Mutuavisió, tu óptica de confianza en Barcelona" name="author">>
+<meta content="Mutuavisió, tu óptica de confianza en Barcelona" name="author">
     <!-- CSS Files
     ================================================== -->
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" id="bootstrap">
