--- a/index.html
+++ b/index.html
@@ -274,21 +274,21 @@
 }
 </style>
                 </div>
-            </section>
-
-           <section class="bg-dark text-light pt-50 pb-50">
-              <div class="container">
-                  <div class="row justify-content-center">
-                     <div class="col-lg-6 col-md-8 text-center">
-                        <div class="de_count wow fadeInUp d-flex align-items-center justify-content-center gap-3" data-wow-delay=".2s">
-                           <span style="font-size:4rem; font-weight:700; line-height:1;">+</span>
-                           <span class="timer" data-to="35" data-speed="3000" style="font-size:4rem; font-weight:700; line-height:1;">0</span>
-                           <span style="font-size:4rem; font-weight:700; line-height:1;">años de experiencia</span>
-                     </div>
-                     </div>
-                 </div>
-              </div>
-           </section>
+            
+           <section class="bg-dark text-light pt-60 pb-60" style="background-size: cover; background-repeat: no-repeat;">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-6 text-center">
+                <div class="de_count wow fadeInRight animated">
+                    <h3 class="display-1 fw-bold" style="font-size: 5rem; margin-bottom: 0.5rem;">
+                        <span class="timer" data-to="37" data-speed="2500">37</span>
+                    </h3>
+                    <h5 class="text-light" style="font-size: 2rem;">Años de experiencia</h5>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 
 
