--- a/booking.html
+++ b/booking.html
@@ -306,10 +306,11 @@
 </div>
 
     <!-- Javascript Files
-    ================================================== -->
-    <script src="js/plugins.js"></script>
-    <script src="js/designesia.js"></script>
-    <script src="js/validation-booking.js"></script>
+================================================== -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="js/plugins.js"></script>
+<script src="js/designesia.js"></script>
+<script src="js/validation-booking.js"></script>
 
     <!-- datepicker begin -->
     <script>
