--- a/index.html
+++ b/index.html
@@ -510,7 +510,8 @@
         </div>
     </div>
 </section>
-
+ 
+<style>#success_message, #error_message { display: none; }</style>
 
         </div>
         <!-- content end -->
@@ -615,13 +616,15 @@
     </div>
 </div>
 
-    <!-- Javascript Files
-    ================================================== -->
-    <script src="js/plugins.js"></script>
-    <script src="js/designesia.js"></script>
-    <script src="js/swiper.js"></script>
-    <script src="js/custom-swiper-1.js"></script>
-    <script src="js/custom-marquee.js"></script>
+  <!-- Javascript Files
+================================================== -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="js/plugins.js"></script>
+<script src="js/designesia.js"></script>
+<script src="js/swiper.js"></script>
+<script src="js/custom-swiper-1.js"></script>
+<script src="js/custom-marquee.js"></script>
+<script src="js/validation-contact.js"></script>
 
 </body>
 
