--- a/aviso-legal.html
+++ b/aviso-legal.html
@@ -48,22 +48,12 @@
                             <div class="de-flex-col header-col-mid">
                                 <!-- mainemenu begin -->
                                 <ul id="mainmenu">
-                                    <li><a class="menu-item" href="index.html">Inicio</a>
+                                    <li><a class="menu-item" href="index.html"></a>
                                     </li>
                                 </ul>
                                 <!-- mainmenu end -->
                             </div>
-                            <div class="de-flex-col">
-                                <div class="menu_side_area">
-                                    <a href="booking.html" class="btn-main fx-slide"><span>Reservar cita</span></a>
-                                    <span id="menu-btn"></span>
-                                </div>
-
-                                <div id="btn-extra">
-                                    <span></span>
-                                    <span></span>
-                                </div>
-                            </div>
+                            
                         </div>
                     </div>
                 </div>
@@ -191,9 +181,9 @@
         <p>En Mutuavisió ofrecemos atención visual personalizada para toda la familia. Somos una óptica familiar de Barcelona que destaca por su honestidad, profesionalidad y precios muy competitivos.</p>
 
         <div class="social-icons">
-            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-            <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://wa.me/34679874077"><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="https://www.facebook.com/mutuavisio/"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/mutuavisio/"><i class="fa-brands fa-instagram"></i></a>
         </div>
     </div>
 </div>
