--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                                 <i class="fs-60 id-color icon_clock"></i>
                                 <div class="ms-3">
                                     <h4 class="mb-0">Horario</h4>
-                                    <p>Lun a Vie  10:00 a 13:30 - 16:30 a 19:30</p>
+                                    <p>Lun a Vie  10:00 a 13:30 - 17:00 a 19:30</p>
                                 </div>
                             </div>
                         </div>
@@ -501,9 +501,9 @@
                 <p>En Mutuavisió ofrecemos un trato cercano, profesional y honesto desde hace años. Somos tu óptica de confianza en Barcelona, con productos de calidad a precios accesibles y atención totalmente personalizada.</p>
 
                 <div class="social-icons mb-sm-30">
-                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/mutuavisio/"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="https://wa.me/34679874077"><i class="fa-brands fa-whatsapp"></i></a>
+                    <a href="https://www.instagram.com/mutuavisio/"><i class="fa-brands fa-instagram"></i></a>
                 </div>
             </div>
             <div class="col-lg-4 col-sm-12">
