--- a/aviso-legal.html
+++ b/aviso-legal.html
@@ -98,9 +98,9 @@
                 <p>En Mutuavisió ofrecemos un trato cercano, profesional y honesto desde hace años. Somos tu óptica de confianza en Barcelona, con productos de calidad a precios accesibles y atención totalmente personalizada.</p>
 
                 <div class="social-icons mb-sm-30">
-                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/mutuavisio/"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="https://wa.me/34679874077"><i class="fa-brands fa-whatsapp"></i></a>
+                    <a href="https://www.instagram.com/mutuavisio/"><i class="fa-brands fa-instagram"></i></a>
                 </div>
             </div>
             <div class="col-lg-4 col-sm-12">
